zacal admin stranku, urobil Upravit a Odstranit buttony pre bonusove ulohy aj s backendom a funguje to instantne..nemusi reloadnut stranku..a zrefaktoroval PresentationPage a BonusPage, ktore boli najskaredsie

--- a/cogsci-react/src/features/student/bonus/BonusPageView.css
+++ b/cogsci-react/src/features/student/bonus/BonusPageView.css
@@ -3,3 +3,10 @@ div.fixed {
   bottom: 2em;
   right: 2em;
 }
+
+.btn-circle.btn-md { 
+  width: 50px; 
+  height: 50px; 
+  border-radius: 25px;  
+  text-align: center; 
+} 
