pridal prelinkovanie z celkovej dochadzky a z celkovych bonusov z mena studenta a z cisla bonusovej ulohy do ich detailu, tiez zmensil pismo a buttony pri zozname potvrdenych studentov na dashboarde admina, upravil farbu admin komentaru

--- a/client/src/features/student/bonus/Bonus.css
+++ b/client/src/features/student/bonus/Bonus.css
@@ -4,6 +4,15 @@
   border-radius: 4%;
 }
 
+.bg-dark-grey {
+  background-color: #dee2ed;
+  border-radius: 4%;
+}
+
+.my-border-2 {
+  border-width: 2px !important;
+}
+
 /* v Comment.js */
 .with-spaces {
   white-space: pre-wrap;
